Script completo ejercicio polimorfismo